[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graphs_yujin_k9"  
version = "0.0.1"
authors = [
  { name="yujin-k9", email="ykim28627@gmail.com" },  
]
description = "Python package that implements Dijkstra's shortest path algorithm."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/yujin-k9/graphs_yujin_k9"
"Bug Tracker" = "https://github.com/yujin-k9/graphs_yujin_k9/issues"
